--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
     "gatsby": "^5.3.3",
-    "gatsby-plugin-image": "^3.3.2",
+    "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-react-svg": "^3.3.0",
-    "gatsby-plugin-sharp": "^5.3.2",
+    "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-media-hook": "^0.5.0"
+    "react-media-hook": "^0.5.0",
+    "sharp": "^0.33.3"
   }
 }
